--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -22,6 +22,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
   <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
+  <script src="//cdn.ckeditor.com/4.7.1/full/ckeditor.js"></script>
 
 </head>
 <body>
