--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -23,6 +23,7 @@
 
   <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
   <script src="//cdn.ckeditor.com/4.7.1/full/ckeditor.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment-with-locales.min.js"></script>
 
 </head>
 <body>
