--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -14,7 +14,7 @@
   <!--<link href="https://raw.github.com/noizwaves/bootstrap-social-buttons/v1.0.0/social-buttons.css" rel="stylesheet"/>-->
 
   <!--Font Awesome-->
-  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
   <!--<script src="node_modules/core-js/client/shim.min.js"></script>-->
   <!-- Optional JavaScript -->
@@ -23,8 +23,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
-  <script src="https://use.fontawesome.com/e8a37ba0ac.js"></script>
-  <!--<script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>-->
+  <!--<script src="https://use.fontawesome.com/e8a37ba0ac.js"></script>-->
+  <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
   <script src="//cdn.ckeditor.com/4.7.1/full/ckeditor.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment-with-locales.min.js"></script>
 
