--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -16,6 +16,8 @@
   <!--Font Awesome-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
+
   <!--<script src="node_modules/core-js/client/shim.min.js"></script>-->
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -27,6 +29,7 @@
   <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
   <script src="//cdn.ckeditor.com/4.7.1/full/ckeditor.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment-with-locales.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
 
 </head>
 <body>
