"Segments List from API added"

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -28,7 +28,7 @@
   <!--<script src="https://use.fontawesome.com/e8a37ba0ac.js"></script>-->
   <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
   <!--<script src="//cdn.ckeditor.com/4.7.1/full/ckeditor.js"></script>-->
-  <script src="https://cdn.ckeditor.com/4.8.0/standard/ckeditor.js"></script>
+  <script src="https://cdn.ckeditor.com/4.8.0/full-all/ckeditor.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment-with-locales.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
 
