landing Page content added

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -28,6 +28,10 @@
   <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>-->
 
   <!--<script src="https://use.fontawesome.com/e8a37ba0ac.js"></script>-->
+
+  <!--Google RecaptchaV2 script tag -->
+  <script src='https://www.google.com/recaptcha/api.js' ?onload=onloadCallback&render=explicit" async defer></script>
+
   <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
   <!--<script src="//cdn.ckeditor.com/4.7.1/full/ckeditor.js"></script>-->
   <script src="https://cdn.ckeditor.com/4.8.0/full-all/ckeditor.js"></script>
