Google Recaptcha v2 added on Sign up Form

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,12 +11,12 @@
   <!-- bootstrap css -->
   <!--<link href="//netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>-->
   <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous"/>-->
-  <link rel="stylesheet" href="/assets/style/picker.min.css" />
+  <link rel="stylesheet" href="/assets/style/picker.min.css"/>
 
   <!--<link href="https://raw.github.com/noizwaves/bootstrap-social-buttons/v1.0.0/social-buttons.css" rel="stylesheet"/>-->
 
   <!--Font Awesome-->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
   <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />-->
 
@@ -29,15 +29,13 @@
 
   <!--<script src="https://use.fontawesome.com/e8a37ba0ac.js"></script>-->
 
-  <!--Google RecaptchaV2 script tag -->
-  <script src='https://www.google.com/recaptcha/api.js' ?onload=onloadCallback&render=explicit" async defer></script>
-
   <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
   <!--<script src="//cdn.ckeditor.com/4.7.1/full/ckeditor.js"></script>-->
   <script src="https://cdn.ckeditor.com/4.8.0/full-all/ckeditor.js"></script>
   <!--<script src="//cdn.tinymce.com/4/tinymce.min.js"></script>-->
   <script type="text/javascript" src="assets/tinymce.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment-with-locales.min.js"></script>
+  <script type="text/javascript"
+          src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment-with-locales.min.js"></script>
   <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>-->
 
 </head>
