--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -38,6 +38,9 @@
           src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment-with-locales.min.js"></script>
   <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>-->
 
+  <!--Chart Js-->
+  <script src="../node_modules/chart.js/src/chart.js"></script>
+
 </head>
 <body>
 <app>Loading...</app>
